adjust link to load dataset

--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -30,9 +30,9 @@
    "outputs": [],
    "source": [
     "# https://archive.ics.uci.edu/dataset/920/jute+pest+dataset\n",
-    "train_dir = 'Data/Jute_Pest_Dataset/train'\n",
-    "val_dir = 'Data/Jute_Pest_Dataset/val'\n",
-    "test_dir = 'Data/Jute_Pest_Dataset/test'"
+    "train_dir = 'https://github.com/phuongtoan521h0486/Machine-Learning-Final-Project/tree/main/Data/Jute_Pest_Dataset/train'\n",
+    "val_dir = 'https://github.com/phuongtoan521h0486/Machine-Learning-Final-Project/tree/main/Data/Jute_Pest_Dataset/val'\n",
+    "test_dir = 'https://github.com/phuongtoan521h0486/Machine-Learning-Final-Project/tree/main/Data/Jute_Pest_Dataset/test'"
    ]
   },
   {
